--- a/src/main/resources/templates/ownerviews/base.html
+++ b/src/main/resources/templates/ownerviews/base.html
@@ -131,10 +131,13 @@
     <!-- ending of content area -->
 
     <script th:src="@{/script/script.js}"></script>
-
+<!-- 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+        <script src=
+        "https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js">
+            </script>
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
