--- a/src/main/resources/templates/ownerviews/guestdetails.html
+++ b/src/main/resources/templates/ownerviews/guestdetails.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="ownerviews/base::layout(~{::section})">
+    <html lang="en" xlmns:th="http://www.thymeleaf.org" th:fragment="layout(content)"></html>
 
 <head>
     <meta charset="UTF-8">
