--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -178,7 +178,7 @@
                             
                         </div>
                         <!-- Graph-2 -->
-                        <div class="col-lg-6 col-sm-12">
+                        <!-- <div class="col-lg-6 col-sm-12">
                             <div class="card text-center">
                                 <div class="collection">
                                     <div class="outer">
@@ -203,7 +203,7 @@
                                 <h3 class="mt-3 text-muted">Rent collected</h3>
                                 
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- Guest and owner Payment information -->
@@ -222,25 +222,19 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <!-- <th>#ID</th> -->
-                                            <!-- <th>Status</th>
-                                            <th>Ref. No</th> -->
+                                            <th>Details</th>
                                             <th>Paid by</th>
-                                            <th>Gateway</th>
                                             <th>Amount</th>
                                             <th>Date</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="tr : ${trans}">
-                                            <!-- <td th:text="${tr.payments.id}"></td> -->
-                                            <!-- <td
-                                                th:classappend="${!tr.payments.status ? 'text-danger' : 'text-success'}">
-                                                <span th:text="${tr.payments.status ? 'Success' : 'Failed'}"></span>
+                                            <td>
+                                                <i class="fa-sharp fa-solid fa-eye" data-target="#paymentDetails-modal"
+                                                 data-toggle="modal" style="color: blueviolet;" th:onclick="|paymentDetails(${tr.payments.id})|"></i>
                                             </td>
-                                            <td th:text="${tr.payments.refNo}"></td> -->
                                             <td th:text="${tr.guest.name}"></td>
-                                            <td th:text="${tr.payments.gateway}"></td>
                                             <td th:classappend="${!tr.payments.status ? 'text-danger' : 'text-success'}"
                                                 style="font-weight: 700;">
                                                 <span th:text="${tr.payments.amount}"></span>
@@ -290,6 +284,61 @@
                 </div>
             </div>
         </div>
+
+
+         <!-- Payment details modal  -->
+        <div class="modal fade" id="paymentDetails-modal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="container-fluid text-center">
+                            <h2>Payment details</h2>
+                        </div>
+
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <!-- Payment details modal body -->
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="">
+
+                            </div>
+                            <table class="mt-2">
+                                <tr>
+                                    <th>Paid by</th>
+                                    <td id="pb-name"></td>
+                                </tr>
+                                <tr>
+                                    <th>Gateway</th>
+                                    <td id="gateway-name" ></td>
+                                </tr>
+                                <tr>
+                                    <th>Amount</th>
+                                    <td id="p-amount"></td>
+                                </tr>
+                                <tr>
+                                    <th>Date</th>
+                                    <td id="p-date"></td>
+                                </tr>
+                                <tr>
+                                    <th>Ref. No.</th>
+                                    <td id="p-refno"></td>
+                                </tr>
+                                <tr>
+                                    <th>Status</th>
+                                    <td id="p-status"></td>
+                                </tr>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         </div>
         <input type="number" id="per-data" th:value="${percentage}" hidden/>
