--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,13 +19,13 @@
                 </ol> -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" th:src="${'/assests/home1.jpg'}" alt="First slide">
+                        <img class="d-block w-100" th:src="${'/assests/Alardbanner1.jpg'}" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" th:src="${'/assests/home2.jpg'}" alt="Second slide">
+                        <img class="d-block w-100" th:src="${'/assests/Alardbanner1.jpg'}" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" th:src="${'/assests/home3.jpg'}" alt="Third slide">
+                        <img class="d-block w-100" th:src="${'/assests/Alardbanner1.jpg'}" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -204,7 +204,7 @@
             <div class="row">
                 <div class="col">
                     <div class="container-fluid text-center">
-                        <h1 class="mt-5 monitor text-white">Customer support</span></h1>
+                        <h1 class="mt-5 monitor text-white">Support</span></h1>
                         <div class="card definition pl-3 mt-3">
                             <p class="text-white m-2">Our primary goal is support you to ensure your
                                 satisfaction and loyalty by providing timely and effective solutions to your problems.
